Fixed spacing issues in about, contact-us, property-details page

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -1,26 +1,15 @@
-
-
-
 .heroSection{
-    /* display:flex; */
-    /* justify-content: space-between; */
-    /* display: block; */
     height: 100vh;
-    /* width: 100vw; */
     background-image: url('../../WebsiteMaterial/AboutImages/Global.png');
     background-size: auto 100vh;
     background-repeat: no-repeat;
     background-position-x: right;
-    /* background-position-y: 0px; */
     
-    /* margin-bottom:10vh; */
 }
 
 .heroText{
-    /* width: 27vw; */
     margin-top:80px;
     margin-left:100px;
-    /* line-height: 20px; */
     padding-top: 20px;
 }
 .heroText span{
@@ -32,28 +21,9 @@
     font-weight: 600;
     margin-top:25px;
 }
-
-/* .heroImg{
-    height:100vh;
-    width: 60vw;
-    margin-top:40px;
-}
-.heroImg img{
-    margin-top:5vh;
-    height:95vh;
-} */
-
-.aboutUs{
-    /* height:100vh; */
-}
-
 .aboutUsBgImage{
     background-image: url('../../WebsiteMaterial/AboutImages/Photo.jpeg');
     background-size:100vw;
-    /* width: 100vw; */
-    /* position: absolute; */
-    /* height:100vh; */
-    /* height:100vh; */
     background-repeat: no-repeat;
 }
 .aboutUsContainer{
@@ -66,14 +36,10 @@
     align-items: center;
     position: relative;
     background-color: rgba(255, 255, 255, 0.8);
-    /* position: absolute; */
     width: 50%;
     top: 10%;
     margin-right:0px;
     margin-left:auto;
-    /* height:100vh; */
-    /* float: right; */
-    /* height: 80%; */
     box-shadow: 0px 0px 20px 20px rgba(255, 255, 255, 0.8);
 }
 
@@ -165,7 +131,6 @@
 
 .becomeFamilyText{
     font-weight: 600;
-    /* padding: 70px 0px; */
 }
 .becomeFamilyText a{
     color:rgb(0, 211, 211);
@@ -192,6 +157,9 @@
     display:flex;
     align-items: center;
 }
+.becomeFamilyText p br:first-child{
+    display: none;
+}
 @media(max-height:1300px){
     .heroSection{
         background-size: auto 80vh;
@@ -200,9 +168,6 @@
     }
 }
 @media(max-width:1023px){
-    /* .aboutUsBgImage img{
-        display: none;
-    } */
     .aboutUs br, .ourDream br {
         display: none;
     }
@@ -216,8 +181,6 @@
     .aboutUsText{
         color: rgb(0, 0, 0);
         font-size: 17.5px;
-        /* margin: auto 20px; */
-        /* margin-top:40px; */
         margin-top:0px;
         font-family: 'Open Sans';
         font-weight: 800;
@@ -226,14 +189,13 @@
         line-height:normal;
     }
     .aboutUsTextContainer{
-        
         background-color: transparent;
         font-size: 20px;
         margin-top:40px;
         width: 100%;
         height:auto;
-        /* float: left; */
         box-shadow: unset;
+        margin-top:0;
     }
     .ourDream h1:nth-child(1){
         font-size: 18px;
@@ -255,39 +217,35 @@
     }
     .ourDreamImages{
         display: flex;
-        /* justify-content: space-evenly; */
         flex-direction: column;
         align-items: center;
     }
     .becomeFamilyContainer{
-        /* display: flex; */
         flex-direction: column;
         align-items: center;
         margin-bottom: 5vh;
-
-        /* margin-top: 2vh;
-        margin-bottom: 16vh; */
     }
     .becomeFamily{
         display: flex;
         align-items: center;
     }
-    .becomeFamilyHead{
+    .becomeFamilyHead {
         width: 100vw;
         text-align: center;
+        font-size: 20px;
     }
     .becomeFamily div:nth-child(1){
-        width: 331px;
+        width: 215px;
         margin-left: auto;
         margin-right:auto;
         display:flex;
         align-items: center;
     }
     .becomeFamilyImg2{
-        margin-left:40px;
+        width: 165px;
+        margin-right: auto;
+        margin-left: auto;
     }
-
-
     .figuresContainer{
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -303,25 +261,12 @@
         background-repeat: no-repeat;
         background-position: right;
         background-position-y: 100px;
-        /* margin-top:20px; */
-    }
-    /* .heroImg img{
-        margin-top:5vh;
-        height:auto;
-        width:70vw;
-    } */
+     }
     .heroText{
         margin-top: -20px;
         margin-left:30px;
-        /* line-height: 18px; */
         padding-top: 55px;
     }
-    
-    /* .heroSection{ */
-        /* display:inline; */
-        /* height:auto; */
-        /* justify-content: space-evenly; */
-    /* } */
     .heroText span{
         font-size:20px;
     }
@@ -329,5 +274,16 @@
         font-size: 15px;
         margin-top: 8px;
     }
-    
+    .aboutUsContainer{
+        padding-top: 0;
+    }
+    .becomeFamilyImg1{
+        width: 215px;
+    }
+    .becomeFamilyText{
+        font-size: 15px;
+    }
+    .becomeFamilyText p br:first-child{
+        display: inline;
+    }
  }
